Add round corners to button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="header"> 
         <div class="top-container">
-            <div class="logo"><h2>Header Logo</h2></div>
+            <div class="logo">Header Logo</div>
             <div class="links-right">
                 <ul class="left-links">
                 <li><a><h3>link 1</h3></a></li>
@@ -21,7 +21,7 @@
             <div class="left-sides2">
                 <div><h2>THIS website is awesome</h2></div>
                 <div><p>This website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</p></div>
-                <button>Sign Up</button>
+                <button class="blue-button">Sign Up</button>
             </div>
             <img src=" images/cat.jpg" class="image-right">
         </div>
