--- a/index.html
+++ b/index.html
@@ -27,7 +27,31 @@
         </div>
     </div>
 
-    <div class="container-cards">cards</div>
+    <div class="container-sec-3">
+        <div class="info">Some random information</div>
+        <div class="card-container">
+            <div class="card-text">
+                <div class="card">1</div>
+                <div class="text">This is a type of plant. We love this one.</div>
+            </div>    
+            <div class="card-text">   
+                <div class="card">2</div>
+                <div class="text">This is a type of plant. We love this one.</div>
+            </div>    
+            <div class="card-text">       
+                <div class="card">3</div>
+                <div class="text">This is a type of plant. We love this one.</div>
+            </div>    
+            <div class="card-text">   
+                <div class="card">4</div>
+                <div class="text">This is a type of plant. We love this one.</div>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <div class="container-quote">quote</div>
     <div class="container-signup">sign up</div>
     <div class="footer">footer</div>
