Add signup button

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <div class="card-container">
             <div class="card-text">
                 <div class="card">1</div>
-                <div class="text">This is a type of plant. We love this one.</div>
+                <div class="text">This is some information</div>
             </div>    
             <div class="card-text">   
                 <div class="card">2</div>
-                <div class="text">This is a type of plant. We love this one.</div>
+                <div class="text">This is some information</div>
             </div>    
             <div class="card-text">       
                 <div class="card">3</div>
-                <div class="text">This is a type of plant. We love this one.</div>
+                <div class="text">This is some information</div>
             </div>    
             <div class="card-text">   
                 <div class="card">4</div>
-                <div class="text">This is a type of plant. We love this one.</div>
+                <div class="text">This is some information</div>
             </div>
         </div>
     </div>
@@ -52,7 +52,20 @@
 
 
 
-    <div class="container-quote">quote</div>
-    <div class="container-signup">sign up</div>
-    <div class="footer">footer</div>
+    <div class="container-quote">
+        <div class="quote"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it is just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em></div>
+        <div class="reference"> -Thor, God of Thunder</div>
+    </div>
+    
+    
+    <div class="container-signup">
+    <div>
+        <div class="action"><strong>Call to action! It's Time!</strong></div>
+        <div class="signup">Sign up for our product by clicking that button right over there!</div>
+    </div>
+    <button class="whitebutton">Sign up</button>
+    </div>
+
+
+    <div class="footer">Copyright The Odin Project 2021</div>
 </body>
